syntax = "proto3";

package compilation_cache_service.cas.v1;

message CASDataID {
  bytes id = 1;
}

message ResponseError { string description = 1; }

// CASDBService for content-addressable storage operations
service CASDBService {
  // Store a compilation artifact in the Content-Addressable Storage
  rpc Save(SaveRequest) returns (SaveResponse);
}

// Request message for Save RPC
message SaveRequest {
  // The artifact data itself (precompiled modules, objects, metadata)
  bytes data = 1;

  // Content-addressable storage ID (hash of the artifact data)
  bytes cas_id = 2;

  // Artifact type (e.g., "pcm", "o", "metadata")
  string type = 3;

  // Optional metadata key-value pairs
  map<string, string> metadata = 4;
}

// Response message for Save RPC
message SaveResponse {
  oneof contents {
    ResponseError error = 1;
    CASDataID cas_id = 2;
  }
}
